ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2013/10/16 - jgonzale - Simulator - 5.1.1
	BUGFIX:		Solved a bug when locating the offsets in a trace without
				offset information

2013/10/02 - jgonzale - prv2dim | trf2dim | Other
	CHANGES:	Merged the trf2dim and trf2trf from Vladimir. Including some
				'common_utilities' files


2013/04/30 - jgonzale - prv2dim - 5.1.0
	FEATURES:	The translator also copies the '.row' file if available.

2013/04/29 - jgonzale - Simulator - 5.1.0
	FEATURES:	Added back support for v4 CFG files. Simulator sets 
				mem_buses = # processors and 1 half duplex intra-node link
				when using v4 configuration files.

	CHANGES:	When copying the output PCF, all information befor the event
				types are embedded, using the Dimemas default states
				

2013/03/28 - jgonzale - GUI - 5.0.0
	BUGFIX		Wrong order in 'Node information' labels

2013/03/28 - jgonzale - Simulator
	BUGFIX:		Correction in scape characters of 'DimemasUpdateCFG'

2013/03/28 - jgonzale - Simulator | GUI | prv2dim - 5.0.0
	FEATURES:	Added intra-node contention simulation. This contention
				is modelled in the same way as the intra-node contention,
				using # of buses, # of input links and # of output links.
				It requires adding these three parameters to the configuration
				file ('node information' has changed), the GUI and also
				the DimemasUpdateCFG, to translate old CFG files no the
				newer version.

				Due to the introduction of these new feature and the
				modificacion of the configuration file, the major version
				has been increased.

	BUGFIX:		'prv2dim' did not translate the MPI_Rsend primitives. Now
				they are translated as regular MPI_Send.
				

2013/03/07 - jgonzale - Simulator
	CHANGES:	New way to compute the collective FANs, taking into